syntax = "proto3";
package bfimports;

message BFTX_transaction {
    BFTX_Payload Properties = 1;
    string Id = 2;
    SignKey PrivateKey = 3;
    string Signhash = 4;
    string Signature = 5;
    bool Verified = 6;
    bool Transmitted = 7;
    string Amendment = 8;
    string Private = 9;
}

message SignKey{
    string Curve = 1;
    string X = 2;
    string Y = 3;
    string D = 4;
}

message BFTX_Payload{
    string Shipper = 1;
    int32 BolNum = 2;
    int64 RefNum = 3;
    int64 Vessel = 4;
    string PortOfLoading = 5;
    string PortOfDischarge = 6;
    string UnitOfVolume = 7;
    string NotifyAddress = 8;
    string DescOfGoods = 9;
    float GrossWeight = 10;
    int32 FreightPayableAmt = 11;
    int64 FreightAdvAmt = 12;
    string GeneralInstructions = 13;
    string DateShipped = 14;
    ISSUEDETAILS IssueDetails = 15;
    int64 NumBol = 16;
    MASTERINFO MasterInfo = 17;
    AGENTFORMASTER AgentForMaster = 18;
    AGENTFOROWNER AgentForOwner = 19;
    string EncryptionMetaData = 20;
    string Consignee = 21;
    string HouseBill = 22;
    string ReceiveAgent = 23;
    string Destination = 24;
    string MarksAndNumbers = 25;
    string UnitOfWeight = 26;
    float Volume =27;
    string Container =28;
    string ContainerSeal =29;
    int64 Packages = 30;
    string PackType = 31;
    string INCOTerms = 32;
    string DeliverAgent = 33; 
    string ContainerMode = 34;
    string ContainerType = 35;
}

message ISSUEDETAILS{
    string PlaceOfIssue = 1;
    string DateOfIssue = 2;
}

message MASTERINFO{
    string FirstName = 1;
    string LastName = 2;
    string Sig = 3;
}

message AGENTFORMASTER{
    string FirstName = 1;
    string LastName = 2;
    string Sig = 3;
}

message AGENTFOROWNER{
    string FirstName = 1;
    string LastName = 2;
    string Sig = 3;
    string ConditionsForCarriage = 4;
}
